cmake_minimum_required(VERSION 3.25)
project(algo)

set(CMAKE_CXX_STANDARD 23)

add_executable(algo template.cpp oj/leetcode/algorithms/301-400/371-380/373/373.cpp oj/leetcode/algorithms/1501-1600/1511-1520/1514/1514.cpp oj/leetcode/algorithms/1601-1700/1681-1690/1681/1681.cpp oj/leetcode/algorithms/1601-1700/1621-1630/1627/1627.cpp oj/leetcode/algorithms/801-900/861-870/864/864.cpp oj/leetcode/algorithms/1201-1300/1251-1260/1253/1253.cpp oj/leetcode/algorithms/1901-2000/1991-2000/1998/1998.cpp)
